2011-05-19  Jim Meyering  <meyering@redhat.com>

	maint: correct misuse of "a" and "an"
	* doc/regex.texi (Collating Symbol Operators): s/an close.../a close/
	* lib/argp-help.c: "an docum...": s/an/a/
	* lib/argp-parse.c: "An vector": s/An/A/
	* lib/execute.c: "an native": s/an/a/
	* lib/spawn-pipe.c: Likewise.
	* lib/gc.h: "an Gc_rc": s/an/a/
	* lib/unigbrk.in.h: "an grapheme": s/an/a/
	* lib/fts.c: "an stat.st_dev": s/an/a/

2011-05-19  Paul Eggert  <eggert@cs.ucla.edu>

	intprops: work around IRIX 6.5 cc bug with 0u - 0u + -1
	See http://lists.gnu.org/archive/html/bug-gnulib/2011-05/msg00406.html
	* lib/intprops.h (_GL_INT_NEGATE_CONVERT): New macro.
	(_GL_INT_SIGNED, _GL_INT_MAXIMUM, _GL_DIVIDE_OVERFLOW):
	(_GL_REMAINDER_OVERFLOW): Use it.

	intprops: work around C compiler bugs
	* lib/intprops.h (INT_MULTIPLY_RANGE_OVERFLOW): Work around compiler
	bug in Sun C 5.11 2010/08/13 and other compilers; see
	<http://lists.gnu.org/archive/html/bug-gnulib/2011-05/msg00401.html>.

	intprops: TYPE_IS_INTEGER, TYPE_SIGNED not integer constant exprs
	* doc/intprops.texi (Integer Type Determination): Fix
	documentation for TYPE_IS_INTEGER: it returns an constant
	expression, not an integer constant expression.  Fix doc for
	TYPE_SIGNED: it returns an integer constant expression only if its
	argument is an integer type.  (TYPE_IS_INTEGER is the same, but is
	hardly worth documented that way....)

2011-05-18  Eric Blake  <eblake@redhat.com>

	fnmatch: avoid compiler warning
	* lib/fnmatch_loop.c (FCT): Use correct type.
	Reported by Matthias Bolte.

2011-05-13  Jim Meyering  <meyering@redhat.com>

	maint.mk: three new prohibit_<HDR>_without_use rules
	* top/maint.mk (sc_prohibit_stdio--_without_use): New rule.
	(sc_prohibit_stdio-safer_without_use): Likewise.
	(sc_prohibit_xfreopen_without_use): Likewise.

2011-05-17  Jim Meyering  <meyering@redhat.com>

	announce-gen: fail if the NEWS delta is empty
	If there's nothing noteworthy in NEWS, then either you forgot